frontend/app/styles/partials/create-badge.scss
.ui{

  .column{
    color: black;
    
    .create-badge {
      position: relative;
      padding-left: 6%;
      padding-right: 6%;
      top: -35px;
    }
  }
}

.guide {
  left: 10px;
  position: relative;
}

.ui.image {
  position: unset;
}

.ui {

  .row {

    .column {
      color: black;
    }
  }
}

.hidden {
  display: none !important;
}

